--- a/frontend/bulk.html
+++ b/frontend/bulk.html
@@ -643,6 +643,334 @@
           grid-template-columns: 1fr;
         }
       }
+
+      /* YouTube Direct Download Modal */
+      .yt-modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: 10000;
+        align-items: center;
+        justify-content: center;
+        animation: fadeIn 0.3s ease;
+      }
+
+      .yt-modal.show {
+        display: flex;
+      }
+
+      .yt-modal-content {
+        background: var(--bg-card);
+        border-radius: 20px;
+        padding: 40px;
+        max-width: 600px;
+        width: 90%;
+        max-height: 90vh;
+        overflow-y: auto;
+        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+        animation: slideUp 0.3s ease;
+      }
+
+      .yt-modal-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 25px;
+      }
+
+      .yt-modal-header h2 {
+        font-size: 24px;
+        color: var(--text-primary);
+      }
+
+      .yt-modal-close {
+        background: none;
+        border: none;
+        font-size: 30px;
+        color: var(--text-secondary);
+        cursor: pointer;
+        padding: 0;
+        width: 35px;
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        transition: all 0.2s ease;
+      }
+
+      .yt-modal-close:hover {
+        background: var(--bg-secondary);
+        color: var(--text-primary);
+      }
+
+      .yt-input-group {
+        margin-bottom: 20px;
+      }
+
+      .yt-input-group label {
+        display: block;
+        color: var(--text-secondary);
+        font-weight: 600;
+        margin-bottom: 8px;
+        font-size: 14px;
+      }
+
+      .yt-input-group input[type="text"],
+      .yt-input-group input[type="number"],
+      .yt-input-group select {
+        width: 100%;
+        padding: 12px 16px;
+        border: 2px solid var(--border-color);
+        border-radius: 10px;
+        background: var(--bg-secondary);
+        color: var(--text-primary);
+        font-size: 15px;
+        transition: all 0.2s ease;
+      }
+
+      .yt-input-group input:focus,
+      .yt-input-group select:focus {
+        outline: none;
+        border-color: var(--accent-color);
+      }
+
+      .yt-btn {
+        width: 100%;
+        padding: 14px 20px;
+        border: none;
+        border-radius: 10px;
+        font-size: 16px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        background: var(--gradient-primary);
+        color: white;
+      }
+
+      .yt-btn:hover:not(:disabled) {
+        transform: translateY(-2px);
+        box-shadow: 0 10px 20px var(--shadow-color);
+      }
+
+      .yt-btn:disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+
+      .yt-advanced-toggle {
+        background: var(--bg-secondary);
+        color: var(--text-primary);
+        padding: 10px;
+        margin-bottom: 15px;
+      }
+
+      .yt-advanced-options {
+        display: none;
+        margin-bottom: 20px;
+      }
+
+      .yt-advanced-options.show {
+        display: block;
+      }
+
+      .yt-option-row {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 15px;
+      }
+
+      .yt-progress {
+        margin-top: 20px;
+        padding: 15px;
+        background: rgba(52, 211, 153, 0.1);
+        border: 2px solid rgba(52, 211, 153, 0.3);
+        border-radius: 10px;
+        text-align: center;
+        display: none;
+      }
+
+      .yt-progress.show {
+        display: block;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      @keyframes slideUp {
+        from {
+          opacity: 0;
+          transform: translateY(30px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* YouTube Direct Download Modal */
+      .yt-modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: 10000;
+        align-items: center;
+        justify-content: center;
+        animation: fadeIn 0.3s ease;
+      }
+
+      .yt-modal.show {
+        display: flex;
+      }
+
+      .yt-modal-content {
+        background: var(--bg-card);
+        border-radius: 20px;
+        padding: 40px;
+        max-width: 600px;
+        width: 90%;
+        max-height: 90vh;
+        overflow-y: auto;
+        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+        animation: slideUp 0.3s ease;
+      }
+
+      .yt-modal-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 25px;
+      }
+
+      .yt-modal-header h2 {
+        font-size: 24px;
+        color: var(--text-primary);
+      }
+
+      .yt-modal-close {
+        background: none;
+        border: none;
+        font-size: 30px;
+        color: var(--text-secondary);
+        cursor: pointer;
+        padding: 0;
+        width: 35px;
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        transition: all 0.2s ease;
+      }
+
+      .yt-modal-close:hover {
+        background: var(--bg-secondary);
+        color: var(--text-primary);
+      }
+
+      .yt-input-group {
+        margin-bottom: 20px;
+      }
+
+      .yt-input-group label {
+        display: block;
+        color: var(--text-secondary);
+        font-weight: 600;
+        margin-bottom: 8px;
+        font-size: 14px;
+      }
+
+      .yt-input-group input[type="text"],
+      .yt-input-group input[type="number"],
+      .yt-input-group select {
+        width: 100%;
+        padding: 12px 16px;
+        border: 2px solid var(--border-color);
+        border-radius: 10px;
+        background: var(--bg-secondary);
+        color: var(--text-primary);
+        font-size: 15px;
+        transition: all 0.2s ease;
+      }
+
+      .yt-input-group input:focus,
+      .yt-input-group select:focus {
+        outline: none;
+        border-color: var(--accent-color);
+      }
+
+      .yt-btn {
+        width: 100%;
+        padding: 14px 20px;
+        border: none;
+        border-radius: 10px;
+        font-size: 16px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        background: var(--gradient-primary);
+        color: white;
+      }
+
+      .yt-btn:hover:not(:disabled) {
+        transform: translateY(-2px);
+        box-shadow: 0 10px 20px var(--shadow-color);
+      }
+
+      .yt-btn:disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+
+      .yt-advanced-toggle {
+        background: var(--bg-secondary);
+        color: var(--text-primary);
+        padding: 10px;
+        margin-bottom: 15px;
+      }
+
+      .yt-advanced-options {
+        display: none;
+        margin-bottom: 20px;
+      }
+
+      .yt-advanced-options.show {
+        display: block;
+      }
+
+      .yt-option-row {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 15px;
+      }
+
+      .yt-progress {
+        margin-top: 20px;
+        padding: 15px;
+        background: rgba(52, 211, 153, 0.1);
+        border: 2px solid rgba(52, 211, 153, 0.3);
+        border-radius: 10px;
+        text-align: center;
+        display: none;
+      }
+
+      .yt-progress.show {
+        display: block;
+      }
     </style>
   </head>
   <body>
